🛠️ Modificaciones de Sintáxis en Parte 1

--- a/src/Sha256.md
+++ b/src/Sha256.md
@@ -1,5 +1,5 @@
 # SHA-256
-Es hora de examinar algunos ejemplos de funciones hash criptográficas ampliamente utilizadas, un ejemplo es `SHA-256` [**(Secure Hash Algorithm 256-bit)**](https://es.wikipedia.org/wiki/SHA-2), **que es una función de hash criptográfica perteneciente a la familia de algoritmos SHA-2.** Esta función acepta una entrada de cualquier longitud y genera una salida de 256 bits que se considera única y asociada de forma irreversible a dicha entrada.
+En este capítulo aprenderemos algunos ejemplos de funciones hash criptográficas ampliamente utilizadas, un ejemplo es `SHA-256` [**(Secure Hash Algorithm 256-bit)**](https://es.wikipedia.org/wiki/SHA-2), **que es una función de hash criptográfica perteneciente a la familia de algoritmos SHA-2.** Esta función acepta una entrada de cualquier longitud y genera una salida de 256 bits que se considera única y asociada de forma irreversible a dicha entrada.
 
 Pueden probar la generación de un hash utilizando cualquier [generador en línea](https://miniwebtool.com/es/sha256-hash-generator/). En este caso, [realizamos pruebas](https://bfotool.com/category/encode-decoder) utilizando la función hash `SHA-256` y `keccak-256`, también pueden explorar y probar [más funciones hash desde aquí.](https://bfotool.com/category/encode-decoder)
 
